<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">ДА</string>
    <string name="false_button">НЕТ</string>
    <string name="correct_toast"> Правильно </string>
    <string name="incorrect_toast"> Неправильно </string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="question_oceans"> Тихий океан больше Антлатического?</string>
    <string name="question_australia"> Каннбера столица Австралии? </string>
    <string name="question_mideast">Суэцкий канал соединяет Крансое море и Индийский океан?</string>
    <string name="question_africa">Река Нил находится в Египте?</string>
    <string name="question_americas">Река Амазонка самая длинная в Америке</string>
    <string name="question_asia">Озеро Байкал самое глубое пресноводное озеро в мире?</string>

</resources>